fix: undo removal of alignment for loading-container

--- a/src/react/components/common/common.scss
+++ b/src/react/components/common/common.scss
@@ -90,6 +90,7 @@
 
 .loading-container { 
   display: flex;
+  align-items: center;
 }
 
 .loading-description {
